[workspace]
members = [
    "crates/arp-common",
    "crates/arp-server",
    "crates/arp-client",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["ARP-Rust Team"]
license = "MIT"
repository = "https://github.com/hex1bit/arp-rust"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
hyper = { version = "1.1", features = ["full"] }
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.2"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
flate2 = "1.0"
futures = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
once_cell = "1.19"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tokio_kcp = "0.9.8"
quinn = "0.11.9"
