[package]
name = "arp-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
futures = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio_kcp = { workspace = true }
quinn = { workspace = true }
